Resolves: tdf#146610 don't reformat MetricSpinButtons if unit didn't change

Change-Id: I58f36b18b456e6d3ccd7482b681e5273ca132499
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143600
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>